modify api/user/find to api/user/checkavailability, add api/user/find/{id}
